# Free3D

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: release.yml
crates/occt/: Cargo.toml
crates/occt-bridge/: Cargo.toml  build.rs
crates/occt-bridge/cpp/: occt_bridge.cpp
crates/occt-bridge/include/: occt_bridge.h
crates/occt-bridge/src/: lib.rs
crates/occt/src/: lib.rs
crates/occt/tests/: parity.rs
src/: adaptive.rs  app.rs  assembly.rs  autosave.rs  camera.rs  commands.rs  constraint.rs  document.rs  drawing.rs  gizmo.rs  history.rs  home.rs  i18n.rs  inspection.rs  io_formats.rs  main.rs  nav.rs  pick.rs  saved_views.rs  settings.rs  sketch.rs  theme.rs  units.rs
src/kernel/: mod.rs
src/tools/: dressup.rs  extrude.rs  mod.rs  offset_face.rs  shell.rs
src/ui/: adaptive_menu.rs  command_search.rs  constraints_panel.rs  drawing_canvas.rs  expr.rs  icons.rs  inspection_card.rs  mod.rs  modes.rs  numeric_input.rs  panels.rs  tool_strip.rs  top_bar.rs  view_cluster.rs
src/viewport/: grid.rs  mod.rs  orientation_cube.rs  reference_image.rs  renderer.rs
