[package]
name = "free3d"
version = "0.1.0"
edition = "2024"

[workspace]
members = [".", "crates/occt-bridge", "crates/occt"]
resolver = "2"

[dependencies]
gpui = { git = "https://github.com/zed-industries/zed" }
gpui_platform = { git = "https://github.com/zed-industries/zed", features = ["font-kit"] }
occt = { path = "crates/occt" }
glam = { version = "0.30", features = ["serde"] }
wgpu = "29"
pollster = "0.4"
bytemuck = { version = "1.25", features = ["derive"] }
image = "0.25"
smallvec = "1.15"
ab_glyph = "0.2.32"
base64 = "0.22"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sys-locale = "0.3.2"
dirs = "6.0.0"
trash = "5.2.6"
opener = { version = "0.8.5", features = ["reveal"] }

[dev-dependencies]
tempfile = "3"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 2

# Release binaries are distributed as single files - keep them lean.
[profile.release]
lto = "thin"
strip = true
